tests/sumo/extended/vaporizer/errors/id_false/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Unknown edge ('xxx') referenced in a vaporizer.
Quitting (on error).
